add support for any character delimiter

--- a/CsvDataReaderTest/CsvDataReaderTest.csproj
+++ b/CsvDataReaderTest/CsvDataReaderTest.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Content Include="MoveCsv.txt" />
     <Content Include="InvalidCsv.txt" />
+    <Content Include="SimpleCsvPipe.txt" />
     <Content Include="SimpleCsv.txt" />
   </ItemGroup>
   <Choose>
